--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,14 @@
 <h1>Pages#homee</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="d-flex">
+  <%= simple_form_for @booking do |f|  %>
+    <%= f.hidden_field :mode, value: 0 %>
+    <%= f.hidden_field :in_session, value: true %>
+    <%= f.button :submit, 'Chat' %>
+  <% end %>
+
+  <%= simple_form_for @booking do |f|  %>
+    <%= f.hidden_field :mode, value: 1 %>
+    <%= f.hidden_field :in_session, value: true %>
+    <%= f.button :submit, 'Video' %>
+  <% end %>
+</div>
