Created chat/video buttons on hp, Updated booking-policies, Added new method on pundit

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,12 +3,14 @@
   <%= simple_form_for @booking do |f|  %>
     <%= f.hidden_field :mode, value: 0 %>
     <%= f.hidden_field :in_session, value: true %>
+    <%= f.hidden_field :emergency, value: true %>
     <%= f.button :submit, 'Chat' %>
   <% end %>
 
   <%= simple_form_for @booking do |f|  %>
     <%= f.hidden_field :mode, value: 1 %>
     <%= f.hidden_field :in_session, value: true %>
+    <%= f.hidden_field :emergency, value: true %>
     <%= f.button :submit, 'Video' %>
   <% end %>
 </div>
