Created footer on HP, style needs modification

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,10 @@
 // Specific CSS for your home-page
+footer {
+  background-color: rgb(211, 218, 219);
+  a {
+    font-size: 30px;
+    margin: 5px 30px;
+    text-decoration: none;
+    color: rgb(141, 144, 146);
+  }
+}
