--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,16 +1,31 @@
-<h1>Pages#homee</h1>
-<div class="d-flex">
+<h3 class='ml-3 mt-3'>SOS section</h3>
+<div class="sos d-flex justify-content-center p-3 border border-dark mx-3">
   <%= simple_form_for @booking do |f|  %>
     <%= f.hidden_field :mode, value: 0 %>
     <%= f.hidden_field :in_session, value: true %>
     <%= f.hidden_field :emergency, value: true %>
-    <%= f.button :submit, 'Chat' %>
+    <%= f.button :submit, 'Chatroom', class: 'btn btn-primary mx-2' %>
   <% end %>
 
   <%= simple_form_for @booking do |f|  %>
     <%= f.hidden_field :mode, value: 1 %>
     <%= f.hidden_field :in_session, value: true %>
     <%= f.hidden_field :emergency, value: true %>
-    <%= f.button :submit, 'Video' %>
+    <%= f.button :submit, 'Video call', class: 'btn btn-primary mx-2' %>
   <% end %>
 </div>
+
+<footer class='d-flex justify-content-center' style='position:absolute;bottom:0;width:100%;'>
+  <%= link_to root_path do %>
+    <i class="fas fa-home"></i>
+  <% end %>
+  <%= link_to root_path do %>
+    <i class="far fa-user"></i>
+  <% end %>
+  <%= link_to bookings_path do %>
+    <i class="fas fa-clipboard-list"></i>
+  <% end %>
+  <%= link_to root_path do %>
+    <i class="fas fa-book"></i>
+  <% end %>
+</footer>
