--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -10,7 +10,8 @@
       input_html: {class: 'category-selector'},
       collection: @counselors.map { |counselor| [cl_image_tag(counselor.photo.key, height: 80, width: 80, radius: 'max', background: '#f4f4f4'), counselor.id ] }
     %>
-    <%= f.input :date, label: 'Date' %>
+    <%= f.input :start_time, label: 'Start Time', minute_step: 30%>
+    <%= f.input :end_time, label: 'End Time', minute_step: 30 %>
     <%= f.input :mode, label: 'Mode',
       as: :radio_buttons,
       collection_wrapper_tag: 'div',
