--- a/app/views/bookings/_counselor_rating.html.erb
+++ b/app/views/bookings/_counselor_rating.html.erb
@@ -1,5 +1,20 @@
-<h2>Student rating</h2>
-<% when @booking.rating.present? %>
-<%= @booking.rating %>
 <h2>The session has ended.</h2>
-<%= link_to "Add a note", "#", class: "btn btn-ghost" %>
+<div class="student_rating text-center">
+  <h2>Student's rating</h2>
+  <% when @booking.rating.present? %>
+  <% if @booking.user.rating == 1 || 2 %>
+    <p><%= @bookings.user.first_name %> <%= @bookings.user.first_name %> is still not feeling well.</p>
+  <% elsif @booking.user.rating == 3 || 4 %>
+    <p><%= @bookings.user.first_name %> <%= @bookings.user.first_name %> is feeling a little well now.</p>
+  <% else @booking.user.rating == 5%>
+    <p><%= @bookings.user.first_name %> <%= @bookings.user.first_name %> is really feeling better.</p>
+  <% end %>
+  <p>Student's rating is<%= @booking.user.rating %>/ 5.</p>
+</div>
+<div class="user_pic col-xs-2 col-sm-3 col-lg-3 text-center">
+  <%= cl_image_tag(@bookings.user.photo.key, height: 80, width: 80, radius: 'max', background: '#f4f4f4') %>
+  <p><%= @bookings.user.first_name %> <%= @bookings.user.first_name %> </p>
+</div>
+<div class="note-btn">
+  <%= link_to "Add a note", "#", class: "btn btn-ghost" %>
+</div>
