--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,8 +2,8 @@
 <div class="sos d-flex justify-content-center p-3 border border-dark mx-3">
   <%= simple_form_for @booking do |f|  %>
     <%= f.hidden_field :mode, value: 0 %>
-    <%= f.hidden_field :in_session, value: true %>
-    <%= f.hidden_field :emergency, value: true %>
+    <%= f.hidden_field :in_session, value: true, as: :boolean %>
+    <%= f.hidden_field :emergency, value: true, as: :boolean %>
     <%= f.button :submit, 'Chatroom', class: 'btn btn-primary mx-2' %>
   <% end %>
 
@@ -15,17 +15,4 @@
   <% end %>
 </div>
 
-<footer class='d-flex justify-content-center' style='position:absolute;bottom:0;width:100%;'>
-  <%= link_to root_path do %>
-    <i class="fas fa-home"></i>
-  <% end %>
-  <%= link_to root_path do %>
-    <i class="far fa-user"></i>
-  <% end %>
-  <%= link_to bookings_path do %>
-    <i class="fas fa-clipboard-list"></i>
-  <% end %>
-  <%= link_to root_path do %>
-    <i class="fas fa-book"></i>
-  <% end %>
-</footer>
+<%= render 'shared/footer' %>
