working on couns dashboard

--- a/app/views/counselors/dashboard.html.erb
+++ b/app/views/counselors/dashboard.html.erb
@@ -1,2 +1,3 @@
-<h1>Counselors#dashboard</h1>
-<p>Find me in app/views/counselors/dashboard.html.erb</p>
+<p><strong>Name:</strong> <%= @counselor.first_name %></p>
+<p><strong>Email:</strong>  <%= @counselor.email %></p>
+<%= render 'shared/footer_counselor' %>
