--- a/app/views/bookings/_note.html.erb
+++ b/app/views/bookings/_note.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for @user do |f| %>
+<%= simple_form_for @booking do |f| %>
   <%= f.input :note, label: "Note" %>
   <%= f.button :submit %>
 <% end %>
