implemented the add note-hidden button

--- a/app/views/bookings/_counselor_rating.html.erb
+++ b/app/views/bookings/_counselor_rating.html.erb
@@ -18,3 +18,14 @@
 </div>
 <%# <div class="note-btn">
   <%= link_to "Add a note", "", class: "btn btn-ghost" %>
+<p>
+  <a class="btn btn-primary" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+    Add a note
+  </a>
+</p>
+<div class="collapse" id="collapseExample">
+  <div class="card card-body">
+    <%= render "note" %>
+  </div>
+</div>
+</div>
