Modified start_time & end_time on seed

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -9,7 +9,8 @@
       <p>with <%= @bookings.first.counselor.last_name %> <%= @bookings.first.counselor.first_name %></p>
     </div>
     <div class="counselor_info col-xs-6 col-sm-6 col-lg-6 text-left">
-      <p>Date: <%= @bookings.first.start_time %></p>
+      <% date = @bookings.first.start_time %>
+      <p>Date: <%= date.year %>/<%= date.month %>/<%= date.day %> <%= date.hour %>:<%= date.min %></p>
       <p>Mode: <%= @bookings.first.mode %></p>
     </div>
 </div>
@@ -23,7 +24,8 @@
       <p>with <%= booking.counselor.last_name %> <%= booking.counselor.first_name %></p>
     </div>
     <div class="counselor_info col-xs-6 col-sm-6 col-lg-6 text-left">
-      <p>Date: <%= booking.start_time %></p>
+      <% date = booking.start_time %>
+      <p>Date: <%= date.year %>/<%= date.month %>/<%= date.day %> <%= date.hour %>:<%= date.min == 0 ? '00' : date.min %></p>
       <p>Mode: <%= booking.mode %></p>
     </div>
   </div>
