working on the dashboard, policy for counselor ready

--- a/app/views/counselors/dashboard.html.erb
+++ b/app/views/counselors/dashboard.html.erb
@@ -1,6 +1,11 @@
 <p><strong>Name:</strong> <%= @counselor.first_name %></p>
 <p><strong>Email:</strong>  <%= @counselor.email %></p>
-
+<div class="sos d-flex justify-content-center p-3 border border-dark m-3">
+  <p>EMERGENCY REQUEST</p>
+</div>
+<div class="sos d-flex justify-content-center p-3 border border-dark m-3">
+  <p>EMERGENCY REQUEST</p>
+</div>
 
 
 <%= render 'shared/footer_counselor' %>
