--- a/app/views/shared/_footer_counselor.erb
+++ b/app/views/shared/_footer_counselor.erb
@@ -3,7 +3,8 @@
     <i class="far fa-user"></i>
   <% end %>
   <%= link_to bookings_path do %>
-    <i class="fas fa-clipboard-list"></i>
+    <i class="fas fa-clipboard-list notify"></i>
+    <%# <span class="icon-button__badge">2</span> %>
   <% end %>
   <%= link_to root_path do %>
     <i class="fas fa-book"></i>
