--- a/app/views/bookings/_chatroom.html.erb
+++ b/app/views/bookings/_chatroom.html.erb
@@ -1,5 +1,8 @@
 <h1>Welcome</h1>
-<%= link_to "End session", '#', class: 'btn btn-warning'  %>
+<%= simple_form_for @booking do |f|  %>
+  <%= f.hidden_field :in_session, value: false, as: :boolean %>
+  <%= f.button :submit, 'End Session', class: 'btn btn-primary mx-2' %>
+<% end %>
 <div id="messages" data-booking-id="<%= @booking.id %>">
   <% @booking.messages.each do |message| %>
     <%= render 'messages/message', message: message %>
