added some style to booking-show

--- a/app/views/bookings/_counselor_rating.html.erb
+++ b/app/views/bookings/_counselor_rating.html.erb
@@ -1,31 +1,30 @@
-<h2>The session has ended.</h2>
-<div class="student_rating text-center">
-  <h2>Student's rating</h2>
+<div class="student-rating text-center">
+  <h3 class="session-ended pt-5">The session has ended.</h3>
+  <div class="user_pic text-center pt-5">
+    <%= cl_image_tag(@booking.user.photo.key, height: 80, width: 80, radius: 'max', background: '#f4f4f4') %>
+    <p class="student-name"><%= @booking.user.first_name %> <%= @booking.user.last_name %> </p>
+  </div>
   <% if @booking.rating.present? %>
+    <p>Student's rating is <strong><%= @booking.rating %> / 5</strong>.</p>
     <% if @booking.rating == 1 || @booking.rating == 2 %>
-      <p><%= @booking.user.first_name %> <%= @booking.user.first_name %> is still not feeling well.</p>
+      <p><%= @booking.user.first_name %> <%= @booking.user.last_name %> is still not feeling well.</p>
     <% elsif @booking.rating == 3 || @booking.rating == 4 %>
-      <p><%= @booking.user.first_name %> <%= @booking.user.first_name %> is feeling a little well now.</p>
+      <p><%= @booking.user.first_name %> <%= @booking.user.last_name %> is feeling a little well now.</p>
     <% elsif @booking.rating ==  5%>
-      <p><%= @booking.user.first_name %> <%= @booking.user.first_name %> is really feeling better.</p>
+      <p><%= @booking.user.first_name %> <%= @booking.user.last_name %> is really feeling better.</p>
     <% end %>
   <% end %>
-  <p>Student's rating is <%= @booking.rating %>/ 5.</p>
-</div>
-<div class="user_pic col-xs-2 col-sm-3 col-lg-3 text-center">
-  <%= cl_image_tag(@booking.user.photo.key, height: 80, width: 80, radius: 'max', background: '#f4f4f4') %>
-  <p><%= @booking.user.first_name %> <%= @booking.user.first_name %> </p>
-</div>
-<%# <div class="note-btn">
-  <%= link_to "Add a note", "", class: "btn btn-ghost" %>
-<p>
-  <a class="btn btn-primary" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-    Add a note
-  </a>
-</p>
-<div class="collapse" id="collapseExample">
-  <div class="card card-body">
-    <%= render "note" %>
+  <p>
+    <a class="btn btn-primary ml-3" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+      Add a note
+    </a>
+  </p>
+  <div class="collapse ml-3 mr-3" id="collapseExample">
+    <div class="card card-body">
+      <%= render "note" %>
+    </div>
   </div>
 </div>
 </div>
+<%# <div class="note-btn">
+  <%= link_to "Add a note", "", class: "btn btn-ghost" %>
