--- a/app/views/bookings/_rating.html.erb
+++ b/app/views/bookings/_rating.html.erb
@@ -3,16 +3,15 @@
 </div>
 <%# Counselor, Time, Mode %>
 <div class="form mx-auto" style='width: 500px'>
-  <%= simple_form_for @booking do |f| %>
+  <%= simple_form_for @booking, method: :patch do |f| %>
     <%= f.input :rating, label: 'Are you feeling better now?',
       as: :radio_buttons,
       collection_wrapper_tag: 'div',
       collection_wrapper_class: 'category-wrapper d-flex',
       item_wrapper_class: 'category-counselor mx-3',
-      input_html: {class: 'category-selector'},
+      input_html: {class: 'category-selector', onchange: 'this.form.submit()'},
       collection: [['Very bad', 1], ['Not really', 2], ['Slightly better', 3], ['Better', 4], ['Much Better', 5]]
     %>
-    <%= f.submit  %>
   <% end %>
   <h3>Would you like to book a session?</h3>
   <%= link_to "Yes", '#' %>
