--- a/app/views/counselors/dashboard.html.erb
+++ b/app/views/counselors/dashboard.html.erb
@@ -1,9 +1,10 @@
 <p><strong>Name:</strong> <%= @counselor.first_name %></p>
 <p><strong>Email:</strong>  <%= @counselor.email %></p>
-<% @counselor.bookings.map do |booking| %>
+<% current_counselor.bookings.map do |booking| %>
   <% if booking.in_session == true %>
     <div class="d-flex justify-content-center p-3 border border-dark m-3">
-      <p>THAT MESSAGE</p>
+      <%= raise %>
+      <p><%  %></p>
     </div>
   <% end %>
 <% end %>
