added kikoe-colors variables in colors.scss

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,3 +8,9 @@ $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
+
+$kikoe-white: rgba(249, 250, 253, 1);
+$kikoe-blue: rgba(145, 178, 253, 1);
+$kikoe-purple: rgba(173, 128, 250, 1);
+$kikoe-pink: rgba(246, 148, 183, 1);
+$kikoe-lightblue: rgba(205, 208, 246, 1);
