--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -6,11 +6,11 @@
 // General style
 $font-family-sans-serif:  $body-font;
 $headings-font-family:    $headers-font;
-$body-bg:                 $light-gray;
+$body-bg:                 $kikoe-white;
 $font-size-base: 1rem;
 
 // Colors
-$body-color: $kikoe-white;
+$body-color: $gray;
 $primary:    $blue;
 $success:    $green;
 $info:       $yellow;
