fixed rating link to for no: linked to root path

--- a/app/views/bookings/_rating.html.erb
+++ b/app/views/bookings/_rating.html.erb
@@ -15,5 +15,5 @@
   <% end %>
   <h3>Would you like to book a session?</h3>
   <%= link_to "Yes", new_booking_path, class: 'btn btn-primary' %>
-  <%= link_to "No", '#', class: 'btn btn-primary' %>
+  <%= link_to "No", root_path, class: 'btn btn-primary' %>
 </div>
