fixed the link to chat, fixed the counselor chat

--- a/app/views/counselors/dashboard.html.erb
+++ b/app/views/counselors/dashboard.html.erb
@@ -2,9 +2,10 @@
 <p><strong>Email:</strong>  <%= @counselor.email %></p>
 <% current_counselor.bookings.map do |booking| %>
   <% if booking.in_session == true %>
-    <div class="btn d-flex justify-content-center p-3 border border-dark m-3">
-      <% link_to bookings_path(booking.id) %>
+    <div class="btn d-flex justify-content-center p-3 border border-dark m-3 position-relative">
+      <%= link_to '', booking_path(booking), class: 'card-link' %>
       <div>
+        <%= cl_image_tag(booking.user.photo.key, height: 80, width: 80, radius: 'max', background: '#f4f4f4') %>
         <p><strong>EMERGENCY CALL</strong></p>
         <p><strong>Name: </strong><%= booking.user.first_name %> <%= booking.user.last_name %></p>
         <p><strong>Mobile Number: </strong><%= booking.user.phone_number %></p>
