--- a/app/views/counselors/bookings.html.erb
+++ b/app/views/counselors/bookings.html.erb
@@ -47,8 +47,7 @@
   <h3>Past Sessions:</h3>
 </div>
 <div class="container">
-  <% past = @bookings.select {|booking| booking.start_time < Time.now} %>
-  <% past.each do |booking| %>
+  <% @past.each do |booking| %>
     <div class="row mx-auto my-3 p-3 d-flex justify-content-center border border-dark">
       <div class="counselor_pic col-xs-2 col-sm-3 col-lg-3 text-center">
         <%= cl_image_tag(booking.user.photo.key, height: 80, width: 80, radius: 'max', background: '#f4f4f4') %>
