fix the url in the path

--- a/app/views/shared/_footer_counselor.erb
+++ b/app/views/shared/_footer_counselor.erb
@@ -2,7 +2,7 @@
   <%= link_to root_path do %>
     <i class="far fa-user"></i>
   <% end %>
-  <%= link_to bookings_path do %>
+  <%= link_to counselor_bookings_path_url do %>
     <i class="fas fa-clipboard-list"></i>
   <% end %>
   <%= link_to root_path do %>
