--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,20 +1,17 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-  <%= link_to "Kikoe+", root_path, class: "navbar-brand" %>
-
+  <%#= link_to "Kikoe+", root_path, class: "navbar-brand" %>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-
-
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? || counselor_signed_in? %>
         <li class="nav-item dropdown">
-        <% user = current_user ? current_user : current_counselor %>
+          <% user = current_user ? current_user : current_counselor %>
           <%= cl_image_tag user.photo.key, class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            <%= link_to "Action", "#", class: "dropdown-item" %>
-            <%= link_to "Another action", "#", class: "dropdown-item" %>
+            <%#= link_to "Action", "#", class: "dropdown-item" %>
+            <%#= link_to "Another action", "#", class: "dropdown-item" %>
             <% logout_path = current_user ? destroy_user_session_path : destroy_counselor_session_path  %>
             <%= link_to "Log out", logout_path, method: :delete, class: "dropdown-item" %>
           </div>
@@ -23,7 +20,7 @@
         <li class="nav-item">
           <%= link_to "Login as student", new_user_session_path, class: "nav-link" %>
         </li>
-         <li class="nav-item">
+        <li class="nav-item">
           <%= link_to "Login as counselor", new_counselor_session_path, class: "nav-link" %>
         </li>
       <% end %>
