--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -14,3 +14,6 @@ $kikoe-blue: rgba(145, 178, 253, 1);
 $kikoe-purple: rgba(173, 128, 250, 1);
 $kikoe-pink: rgba(246, 148, 183, 1);
 $kikoe-lightblue: rgba(205, 208, 246, 1);
+
+$background-color: #ad80fa;
+$background-image: linear-gradient(45deg, #ad80fa 5%, #91b2fd 69%, #cdd0f6 98%);
