navbar and footer working, but not the resources

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -2,7 +2,7 @@
   <%= link_to root_path do %>
     <i class="fas fa-home"></i>
   <% end %>
-  <%= link_to root_path do %>
+  <%= link_to user_dashboard_path do %>
     <i class="far fa-user"></i>
   <% end %>
   <%= link_to bookings_path do %>
