fixed navbar render

--- a/app/views/bookings/_counselor_rating.html.erb
+++ b/app/views/bookings/_counselor_rating.html.erb
@@ -1,3 +1,4 @@
+<%= render 'shared/navbar' %>
 <div class="student-rating text-center">
   <h3 class="session-ended pt-5">The session has ended.</h3>
   <div class="user_pic text-center pt-5">
