--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,4 @@
+<%= render 'shared/navbar' %>
 <h3 class='ml-3 mt-3'>SOS section</h3>
 <div class="sos d-flex justify-content-center p-3 border border-dark mx-3">
   <%= simple_form_for @booking do |f|  %>
