--- a/app/views/counselors/bookings.html.erb
+++ b/app/views/counselors/bookings.html.erb
@@ -1,3 +1,4 @@
+<%= render 'shared/navbar' %>
 <div class="title col-xs-8 col-sm-9 col-lg-9 mx-auto my-2" style='display: block'>
   <h3>Recent bookings:</h3>
 </div>
