counselor footer fixed

--- a/app/views/shared/_footer_counselor.erb
+++ b/app/views/shared/_footer_counselor.erb
@@ -1,5 +1,5 @@
 <footer class='d-flex justify-content-center' style='position:absolute;bottom:0;width:100%;'>
-  <%= link_to root_path do %>
+  <%= link_to counselor_dashboard_path do %>
     <i class="far fa-user"></i>
   <% end %>
   <%= link_to counselor_bookings_path do %>
