--- a/app/views/shared/_footer_counselor.erb
+++ b/app/views/shared/_footer_counselor.erb
@@ -5,7 +5,7 @@
   <%= link_to counselor_bookings_path do %>
     <i class="fas fa-clipboard-list"></i>
   <% end %>
-  <%= link_to root_path do %>
+  <%= link_to counselor_dashboard_path do %>
     <i class="fas fa-book"></i>
   <% end %>
 </footer>
