--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,10 @@
 .navbar-lewagon {
   justify-content: space-between;
   background: white;
+  // background-color: #ad80fa;
+  // background-image: linear-gradient(45deg, #ad80fa 5%, #91b2fd 69%, #cdd0f6 98%);
+  // min-height: 10rem;
+  // box-shadow: 4px 1px 6px rgb(0 0 0 / 40%);
 }
 
 .navbar-lewagon .navbar-collapse {
