--- a/app/views/bookings/_chatroom.html.erb
+++ b/app/views/bookings/_chatroom.html.erb
@@ -1,7 +1,9 @@
 <div class="top-head">
   <%= simple_form_for @booking do |f|  %>
     <%= f.hidden_field :in_session, value: false, as: :boolean %>
-    <%= f.button :submit, 'End Session', class: 'btn btn-primary mx-2' %>
+    <div class="top-head-button">
+      <%= f.button :submit, 'End Session', class: 'btn btn-primary mx-1' %>
+    </div>
   <% end %>
 </div>
 <div id="messages" data-booking-id="<%= @booking.id %>">
@@ -10,6 +12,8 @@
   <% end %>
 </div>
 <%= simple_form_for [ @booking, @message ], remote: true do |f| %>
-  <%= f.input :content, label: false, placeholder: "Aa" %>
-  <%= f.submit  %>
+  <div class='d-flex'>
+    <%= f.input :content, label: false, placeholder: "Aa" %>
+    <%= f.submit  %>
+  </div>
 <% end %>
