--- a/app/views/bookings/_chatroom.html.erb
+++ b/app/views/bookings/_chatroom.html.erb
@@ -1,19 +1,23 @@
-<div class="top-head">
-  <%= simple_form_for @booking do |f|  %>
-    <%= f.hidden_field :in_session, value: false, as: :boolean %>
-    <div class="top-head-button">
-      <%= f.button :submit, 'End Session', class: 'btn btn-primary mx-1' %>
+<div class="page-frame-content">
+  <div class="top-head">
+    <%= simple_form_for @booking do |f|  %>
+      <%= f.hidden_field :in_session, value: false, as: :boolean %>
+      <div class="top-head-button">
+        <%= f.button :submit, 'End Session', class: 'btn btn-primary mx-1' %>
+      </div>
+    <% end %>
+  </div>
+  <div class="page-frame-body">
+    <div id="messages" data-booking-id="<%= @booking.id %>">
+      <% @booking.messages.each do |message| %>
+        <%= render 'messages/message', message: message %>
+      <% end %>
+    </div>
+  </div>
+  <%= simple_form_for [ @booking, @message ], remote: true do |f| %>
+    <div class='page-frame-footer d-flex'>
+      <%= f.input :content, label: false, placeholder: "Aa" %>
+      <%= f.submit  %>
     </div>
   <% end %>
 </div>
-<div id="messages" data-booking-id="<%= @booking.id %>">
-  <% @booking.messages.each do |message| %>
-    <%= render 'messages/message', message: message %>
-  <% end %>
-</div>
-<%= simple_form_for [ @booking, @message ], remote: true do |f| %>
-  <div class='d-flex'>
-    <%= f.input :content, label: false, placeholder: "Aa" %>
-    <%= f.submit  %>
-  </div>
-<% end %>
