--- a/app/assets/stylesheets/components/_chatroom.scss
+++ b/app/assets/stylesheets/components/_chatroom.scss
@@ -5,8 +5,16 @@
   justify-content: space-between;
 }
 
-.page-frame-header {
-  padding: 16px;
+.top-head {
+  min-height: 4rem;
+  background-color: #ad80fa;
+  background-image: linear-gradient(45deg, #ad80fa 5%, #91b2fd 69%, #cdd0f6 98%);
+  opacity: 0.6;
+  position:sticky;
+  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: end;
 }
 
 .page-frame-body {
@@ -14,6 +22,5 @@
   overflow: scroll;
 }
 
-.page-frame-footer {
-  padding: 16px;
-}
+// .page-frame-footer {
+// }
