Fixed footer position

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -45,4 +45,4 @@
 </div>
 <%# cant stick to bottom yet %>
 <%# render 'shared/footer' %>
-<%# render 'shared/footer' %>
+<%= render 'shared/footer' %>
