--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -24,7 +24,7 @@
     %>
     <%= f.hidden_field :in_session, value: false, as: :boolean %>
     <%= f.hidden_field :emergency, value: false, as: :boolean %>
-    <%= f.button :submit, 'Submit', class: 'btn btn-primary' %>
+    <%= f.button :submit, 'Submit', class: 'new-btn' %>
   <% end %>
 </div>
 <%= render 'shared/footer' %>
