Created past session(student)

--- a/app/views/shared/_footer_counselor.erb
+++ b/app/views/shared/_footer_counselor.erb
@@ -1,4 +1,4 @@
-<footer class='d-flex justify-content-center'>
+<footer class='d-flex justify-content-center position-sticky'>
   <%= link_to counselor_dashboard_path do %>
     <i class="far fa-user"></i>
   <% end %>
