--- a/app/views/counselors/bookings.html.erb
+++ b/app/views/counselors/bookings.html.erb
@@ -24,23 +24,5 @@
     <p class='ml-5'>No upcoming bookings!</p>
   <% end %>
 </div>
-<div class="title col-xs-8 col-sm-9 col-lg-9 mx-auto my-2" style='display: block'>
-  <h3>Past Sessions:</h3>
-</div>
-<div class="container">
-  <% @past.each do |booking| %>
-    <div class="row mx-auto my-3 p-3 d-flex justify-content-center border border-dark">
-      <div class="counselor_pic col-xs-2 col-sm-3 col-lg-3 text-center">
-        <%= cl_image_tag(booking.user.photo.key, height: 80, width: 80, radius: 'max', background: '#f4f4f4') %>
-        <p>with <%= booking.user.last_name %> <%= booking.user.first_name %></p>
-      </div>
-      <div class="counselor_info col-xs-6 col-sm-6 col-lg-6 text-left">
-        <% date = booking.start_time %>
-        <p>Date: <%= date.year %>/<%= date.month %>/<%= date.day %> <%= date.hour %>:<%= date.min == 0 ? '00' : date.min %></p>
-        <p>Mode: <%= booking.mode %></p>
-        <p>Note: <%= booking.note %></p>
-      </div>
-    </div>
-  <% end %>
-</div>
+<%= render 'past_sessions' %>
 <%= render 'shared/footer_counselor' %>
