--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class='d-flex justify-content-center'>
+<footer class='d-flex justify-content-center position-sticky'>
   <%= link_to root_path do %>
     <i class="fas fa-home"></i>
   <% end %>
