--- a/app/assets/stylesheets/components/_chatroom.scss
+++ b/app/assets/stylesheets/components/_chatroom.scss
@@ -38,7 +38,7 @@
 }
 
 .chat-message {
-  background-color: #D9EDF7;
+  background-color: rgba(145, 178, 253, 0.4);
   border-color: #BCE8F1;
   padding: 8px;
   border-radius: 5px;
