--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,6 +1,6 @@
 <%# Counselor, Time, Mode %>
 <div class="form mx-auto" style='width: 500px'>
-  <div class="mx-auto my-3" style='width: 500px'>
+  <div class="mx-4px" >
     <h1>Book a Session</h1>
   </div>
   <%= simple_form_for @booking do |f| %>
@@ -12,6 +12,9 @@
       input_html: {class: 'category-selector'},
       collection: @counselors.map { |counselor| [cl_image_tag(counselor.photo.key, height: 100, width: 100, radius: 'max', background: 'transparent'), counselor.id ] }
     %>
+    <%# <div class="middle">
+      <div class="text">Chosen</div>
+    </div> %>
     <%= f.input :start_time, label: 'Start Time', minute_step: 30%>
     <%= f.input :end_time, label: 'End Time', minute_step: 30 %>
     <%= f.input :mode, label: 'Mode',
