--- a/app/assets/stylesheets/components/_chatroom.scss
+++ b/app/assets/stylesheets/components/_chatroom.scss
@@ -62,4 +62,8 @@
   border-color: #EEEEEE;
   padding: 8px;
   border-radius: 5px;
+  max-width: 77%;
+      p {
+      word-break: break-all;
+    }
 }
