--- a/app/assets/stylesheets/components/_chatroom.scss
+++ b/app/assets/stylesheets/components/_chatroom.scss
@@ -45,6 +45,7 @@
   max-width: 77%;
     p {
       word-break: break-all;
+      margin-bottom: 0;
     }
 }
 
@@ -65,5 +66,6 @@
   max-width: 77%;
       p {
       word-break: break-all;
+      margin-bottom: 0;
     }
 }
