--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,8 +1,6 @@
+<div class="mx-auto my-3" style='width: 500px'><h1>Book a Session</h1></div>
 <%# Counselor, Time, Mode %>
 <div class="form mx-auto" style='width: 500px'>
-  <div class="mx-4px" >
-    <h1>Book a Session</h1>
-  </div>
   <%= simple_form_for @booking do |f| %>
     <%= f.association :counselor, label: 'Counselors',
       as: :radio_buttons,
@@ -10,11 +8,8 @@
       collection_wrapper_class: 'category-wrapper d-flex',
       item_wrapper_class: 'category-counselor mx-3',
       input_html: {class: 'category-selector'},
-      collection: @counselors.map { |counselor| [cl_image_tag(counselor.photo.key, height: 100, width: 100, radius: 'max', background: 'transparent'), counselor.id ] }
+      collection: @counselors.map { |counselor| [cl_image_tag(counselor.photo.key, height: 80, width: 80, radius: 'max', background: '#f4f4f4'), counselor.id ] }
     %>
-    <%# <div class="middle">
-      <div class="text">Chosen</div>
-    </div> %>
     <%= f.input :start_time, label: 'Start Time', minute_step: 30%>
     <%= f.input :end_time, label: 'End Time', minute_step: 30 %>
     <%= f.input :mode, label: 'Mode',
@@ -27,7 +22,8 @@
     %>
     <%= f.hidden_field :in_session, value: false, as: :boolean %>
     <%= f.hidden_field :emergency, value: false, as: :boolean %>
-    <%= f.button :submit, 'Submit', class: 'new-submit-btn' %>
+    <%= f.button :submit, 'Submit', class: 'btn btn-primary' %>
   <% end %>
 </div>
+
 <%= render 'shared/footer' %>
