--- a/app/views/bookings/_note.html.erb
+++ b/app/views/bookings/_note.html.erb
@@ -1,4 +1,4 @@
 <%= simple_form_for @booking do |f| %>
   <%= f.input :note, label: "Note" %>
-  <%= f.button :submit %>
+  <%= f.button :submit, "Submit" %>
 <% end %>
