--- a/app/views/bookings/_counselor_rating.html.erb
+++ b/app/views/bookings/_counselor_rating.html.erb
@@ -1,28 +1,30 @@
 <%= render 'shared/navbar' %>
-<div class="student-rating text-center">
-  <h3 class="session-ended pt-5">The session has ended.</h3>
-  <div class="user_pic text-center pt-5">
-    <%= cl_image_tag(@booking.user.photo.key, height: 80, width: 80, radius: 'max', background: '#f4f4f4') %>
-    <p class="student-name"><%= @booking.user.first_name %> <%= @booking.user.last_name %> </p>
-  </div>
-  <% if @booking.rating.present? %>
-    <p>Student's rating is <strong><%= @booking.rating %> / 5</strong>.</p>
-    <% if @booking.rating == 1 || @booking.rating == 2 %>
-      <p><%= @booking.user.first_name %> <%= @booking.user.last_name %> is still not feeling well.</p>
-    <% elsif @booking.rating == 3 || @booking.rating == 4 %>
-      <p><%= @booking.user.first_name %> <%= @booking.user.last_name %> is feeling a little well now.</p>
-    <% elsif @booking.rating ==  5%>
-      <p><%= @booking.user.first_name %> <%= @booking.user.last_name %> is really feeling better.</p>
+<div class="container">
+  <div class="wrapper text-center">
+    <h3 class="session-ended pt-5">The session has ended.</h3>
+    <div class="user_pic text-center pt-5">
+      <%= cl_image_tag(@booking.user.photo.key, height: 80, width: 80, radius: 'max', background: '#f4f4f4') %>
+      <p class="student-name"><%= @booking.user.first_name %> <%= @booking.user.last_name %> </p>
+    </div>
+    <% if @booking.rating.present? %>
+      <p>Student's rating is <strong><%= @booking.rating %> / 5</strong>.</p>
+      <% if @booking.rating == 1 || @booking.rating == 2 %>
+        <p><%= @booking.user.first_name %> <%= @booking.user.last_name %> is still not feeling well.</p>
+      <% elsif @booking.rating == 3 || @booking.rating == 4 %>
+        <p><%= @booking.user.first_name %> <%= @booking.user.last_name %> is feeling a little well now.</p>
+      <% elsif @booking.rating ==  5%>
+        <p><%= @booking.user.first_name %> <%= @booking.user.last_name %> is really feeling better.</p>
+      <% end %>
     <% end %>
-  <% end %>
-  <p>
-    <a class="btn btn-primary ml-3" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-      Add a note
-    </a>
-  </p>
-  <div class="collapse ml-3 mr-3" id="collapseExample">
-    <div class="card card-body">
-      <%= render "note" %>
+    <p>
+      <a class="counselor-rating-btn " data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+        Add a note
+      </a>
+    </p>
+    <div class="collapse ml-3 mr-3" id="collapseExample">
+      <div class="card card-body">
+        <%= render "note" %>
+      </div>
     </div>
   </div>
 </div>
