--- a/app/views/shared/_footer_counselor.erb
+++ b/app/views/shared/_footer_counselor.erb
@@ -1,4 +1,4 @@
-<footer class='d-flex justify-content-center position-sticky'>
+<footer class='d-flex justify-content-center fixed-bottom'>
   <div>
     <%= link_to counselor_dashboard_path do %>
       <i class="far fa-user"></i>
