--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,6 +1,7 @@
 // Specific CSS for your home-page
 footer {
   background-color: rgb(211, 218, 219);
+  z-index: -1;
   a {
     font-size: 30px;
     margin: 5px 30px;
